# crossaver

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindCrossaver.cmake  LinkMode.cmake  ScreensaverBuild.cmake
examples/colors/: CMakeLists.txt
examples/colors/src/: colors.cpp  colors.h  main.cpp
examples/simpleText/: CMakeLists.txt
examples/simpleText/src/: main.cpp  simpleText.cpp  simpleText.h
include/: crossaver.h
src/: constants.h  crossaver.cpp  request.cpp  request.h  requestType.h
